a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Fan_Jin/badint.min
# This program is invalid as float cannot be downcasted to int for assignment

var x: int;
var y: float;

x = 3;
y = 2;
x = x / y;

